# Parallel-Programming

./: Readme.md
Project 1 - Odd-Even Sort/: .clang-format  .gitignore  Makefile  odd_even_parallel_sort.cpp  odd_even_sequential_sort.cpp  parse_output.py  run_tests.py  test_data_generator.cpp
Project 1 - Odd-Even Sort/test_data/: 100.in  1000.in  10000.in  20.in  200.in  300.in  400.in  500.in  5000.in
Project 1 - Odd-Even Sort/test_profiles/: job.sh
Project 2 - Mandelbrot Set/: .clang-format  .gitignore  CMakeLists.txt  Readme.md  asg2.h  mpi.cpp  pthread.cpp  sequential.cpp
Project 2 - Mandelbrot Set/scripts/: cmake_build.sh  job.sh  parse_outputs.py  run_tests_mpi.py  run_tests_pthread.py  run_tests_seq.py  test_profiles.py
Project 3 - N-Body Simulation/: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
Project 3 - N-Body Simulation/scripts/: cmake_debug.sh  cmake_release.sh  cmake_release_gui.sh  parse_outputs.py  run_tests_cuda.py  run_tests_mpi.py  run_tests_mpiomp.py  run_tests_openmp.py  run_tests_pthread.py  run_tests_seq.py  test_profiles.py
Project 3 - N-Body Simulation/slurm_scripts/: cuda.sh  mpi.sh  mpiomp.sh  openmp.sh  pthread.sh  sequential.sh
Project 3 - N-Body Simulation/src/: CMakeLists.txt  common.cpp  cuda.cu  mpi.cpp  mpiomp.cpp  openmp.cpp  phsics.cpp  pthread.cpp  sequential.cpp
Project 3 - N-Body Simulation/src/headers/: common.h  physics.h
Project 4 - Heat Simulation/: .clang-format  CMakeLists.txt  CMakeSettings.json  Readme.md
Project 4 - Heat Simulation/outputs/: stats.csv
Project 4 - Heat Simulation/scripts/: parse_outputs.py  run_tests_cuda.py  run_tests_mpi.py  run_tests_mpiomp.py  run_tests_openmp.py  run_tests_pthread.py  run_tests_seq.py  test_profiles.py
Project 4 - Heat Simulation/slurm_scripts/: cuda.sh  mpi.sh  mpiomp.sh  openmp.sh  pthread.sh  sequential.sh
Project 4 - Heat Simulation/src/: CMakeLists.txt  common.cpp  cuda.cu  mpi.cpp  mpiomp.cpp  openmp.cpp  pthread.cpp  sequential.cpp
Project 4 - Heat Simulation/src/headers/: common.h
